<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="20dp"
    tools:context=".ui.fragments.FeedbackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/primaryTextColor"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="0.3dp"
            android:layout_marginTop="10dp"
            app:expandedHintEnabled="false"
            android:textColorHint="@color/primaryTextColor"
            app:hintTextColor="@color/primaryTextColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp"
                android:imeOptions="actionNext"
                app:hintTextColor="@color/primaryTextColor"
                android:singleLine="true"
                android:textColor="@color/blackTextColor"
                android:hint="@string/full_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/primaryTextColor"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="0.3dp"
            android:layout_marginTop="10dp"
            app:expandedHintEnabled="false"
            android:textColorHint="@color/primaryTextColor"
            app:hintTextColor="@color/primaryTextColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="15sp"
                android:imeOptions="actionNext"
                app:hintTextColor="@color/primaryTextColor"
                android:singleLine="true"
                android:textColor="@color/blackTextColor"
                android:hint="@string/mobile_number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/primaryTextColor"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="0.3dp"
            android:layout_marginTop="10dp"
            app:expandedHintEnabled="false"
            android:textColorHint="@color/primaryTextColor"
            app:hintTextColor="@color/primaryTextColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:imeOptions="actionNext"
                app:hintTextColor="@color/primaryTextColor"
                android:singleLine="true"
                android:textColor="@color/blackTextColor"
                android:hint="@string/email_address"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/primaryTextColor"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="0.3dp"
            android:layout_marginTop="10dp"
            app:expandedHintEnabled="false"
            android:textColorHint="@color/primaryTextColor"
            app:hintTextColor="@color/primaryTextColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="start"
                android:textSize="15sp"
                android:lines="5"
                android:maxLines="5"
                android:imeOptions="actionDone"
                app:hintTextColor="@color/primaryTextColor"
                android:textColor="@color/blackTextColor"
                android:hint="@string/message"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="50dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/primary"
            app:rippleColor="@color/rippleColorWhiteLight"
            app:cardElevation="0dp"
            android:layout_gravity="center_vertical"
            android:theme="@style/Theme.MaterialComponents">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_submit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/submit"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/whiteTextColor"
                    android:background="@color/primary"/>

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:indeterminateTint="@color/white"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</FrameLayout>